--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,7 @@
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
-  overflow: hidden;
+  overflow: auto;
+  --bg-primary: #f5f0e8;
+  background-color: var(--bg-primary);
 }
