--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
   flex: 1 1 auto;
   flex-direction: column;
   overflow: auto;
-  --bg-primary: #f5f0e8;
-  background-color: var(--bg-primary);
+  background-color: #f5f0e8;
+  transition: background-color 0.3s ease;
+}
+
+:root.dark-mode {
+  background-color: #333333;
 }
